<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDark"
        tools:context=".snchoose">
    <TextView android:layout_width="match_parent" android:layout_height="50dp"
              android:text="@string/snchoose" android:textSize="20sp"
              android:gravity="center_vertical"
              android:textStyle="bold"
              android:textColor="@color/colorLite"
              android:background="@color/colorDark"

              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp" android:layout_marginEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent">
<TableLayout android:layout_width="match_parent" android:layout_height="wrap_content"
android:background="@color/colorDark">
    <Button
            android:text="@string/vk"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/ic_add_black_24dp"

            android:backgroundTint="#00FFFFFF" android:backgroundTintMode="screen"/>
    <Button
            android:text="@string/fb"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/ic_add_black_24dp"

            android:backgroundTintMode="screen"/>
    <Button
            android:text="@string/inst"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/ic_add_black_24dp"

            android:backgroundTintMode="screen"/>
</TableLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>