<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/app_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:fontFamily="sans-serif"
            android:textSize="20sp" android:textStyle="bold"

            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"/>
    <TextView
            android:text="@string/app_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"

            android:fontFamily="sans-serif"
            android:textSize="20sp" android:textStyle="bold"

            android:layout_above="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:layout_width="165dp"
            android:layout_height="165dp" app:srcCompat="@drawable/ic_pocherkv1"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content"

            android:drawableEnd="@drawable/ic_chevron_right_white_24dp"
            android:text="@string/startbutton"
            android:id="@+id/button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            style="@style/Widget.AppCompat.Button.Colored"/>
</android.support.constraint.ConstraintLayout>